--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="game-container">
         <div class="game-image">
-            <img id="animalImage" src="" alt="Animal">
+            <img id="animalImage" src="" alt="Animal" loading="lazy">
         </div>
         <div class="game-options">
             <button class="option-button" onclick="checkAnswer(0)" id="option0"></button>
